--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+html,body{
+    margin: 0;
+    padding: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+overflow-x: hidden;
+display: flex;
+flex-direction: column;
+align-items: center;
+
+
+}
 #box{
  background-color: #1f2937;
  width: 100%;
@@ -92,14 +103,7 @@ li:nth-of-type(1){
     margin-left: auto;
     
 }
-html,body{
-    margin: 0;
-    padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-overflow-x: hidden;
 
-
-}
 .info{
     background-color: white;
    
@@ -225,6 +229,8 @@ footer{
     padding: 30px 250px;
     color: #f9faf8;
     display: flex;
+    flex-shrink: 0;
     flex-wrap: wrap;
     justify-content: center;
+    width: 100%;
 }
