--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@ html,body{
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 overflow-x: hidden;
-display: flex;
-flex-direction: column;
-align-items: center;
+
 
 
 }
@@ -15,6 +13,9 @@ align-items: center;
  margin: 0px;
  flex-wrap: wrap;
 
+}
+.Sign-Up{
+    align-self: center;
 }
 .navbar{
     display: flex;
@@ -34,19 +35,28 @@ align-items: center;
 .hero{
     display: flex;
     
-    width: 100%;
+    
    
 
     align-items: center;
     justify-content: center;
     padding: 20px;
-    gap: 24px;
+    gap: 40px;
     flex-wrap: wrap;
    
 }
+.hero-image{
+    flex-wrap: wrap;
+    flex-shrink: 3;
+    
+}
 .hero-image #im{
-    width: 350px;
-    height: 180px;
+    max-width: 350px;
+    max-height: 180px;
+    border: white solid 1px;
+    border-radius: 7px;
+   
+
 }
 .hero-content{
     display: flex;
@@ -197,6 +207,7 @@ li:nth-of-type(1){
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 100%;
 }
 .call-content{
     background-color: #3882f2;
@@ -225,12 +236,18 @@ li:nth-of-type(1){
 }
 footer{
     background-color: #1c2531;
-    text-align: center;
     padding: 30px 250px;
     color: #f9faf8;
     display: flex;
-    flex-shrink: 0;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
+    align-items: center;
+    max-width: 100%;
+    
+
+    
+}
+.foot-text{
+  margin-left: auto;
+  margin-right: auto;
 }
